# ChangeLog for kde-base/ksmserver
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/ksmserver/ChangeLog,v 1.315 2014/07/23 16:53:01 johu Exp $

  23 Jul 2014; Johannes Huber <johu@gentoo.org> -ksmserver-4.11.10.ebuild:
  Remove KDE Workspace 4.11.10

*ksmserver-4.11.11 (16 Jul 2014)

  16 Jul 2014; Johannes Huber <johu@gentoo.org> +ksmserver-4.11.11.ebuild:
  Version bump KDE Workspace 4.11.11

*ksmserver-4.11.10 (15 Jun 2014)

  15 Jun 2014; Michael Palimaka <kensington@gentoo.org>
  +ksmserver-4.11.10.ebuild:
  Version bump KDE SC 4.11.10

  08 May 2014; Johannes Huber <johu@gentoo.org>
  -files/ksmserver-4.10.50-noplasmalock.patch,
  -files/ksmserver-4.11.97-noplasmalock.patch:
  Remove unused patches.

  08 May 2014; Agostino Sarubbo <ago@gentoo.org> -ksmserver-4.11.5.ebuild:
  Remove old

  08 May 2014; Agostino Sarubbo <ago@gentoo.org> ksmserver-4.11.9.ebuild:
  Stable for ppc64, wrt bug #504210

  07 May 2014; Agostino Sarubbo <ago@gentoo.org> ksmserver-4.11.9.ebuild:
  Stable for ppc, wrt bug #504210

  07 May 2014; Johannes Huber <johu@gentoo.org> -ksmserver-4.11.7.ebuild:
  Remove KDE Workspace 4.11.7

  07 May 2014; Mikle Kolyada <zlogene@gentoo.org> ksmserver-4.11.9.ebuild:
  x86 stable wrt bug #504210

  06 May 2014; Mikle Kolyada <zlogene@gentoo.org> ksmserver-4.11.9.ebuild:
  amd64 stable wrt bug #504210

  29 Apr 2014; Johannes Huber <johu@gentoo.org> -ksmserver-4.11.8.ebuild:
  Remove KDE Workspace 4.11.8

*ksmserver-4.11.9 (29 Apr 2014)

  29 Apr 2014; Johannes Huber <johu@gentoo.org> +ksmserver-4.11.9.ebuild:
  Version bump KDE Workspace 4.11.9

*ksmserver-4.11.8 (01 Apr 2014)

  01 Apr 2014; Johannes Huber <johu@gentoo.org> +ksmserver-4.11.8.ebuild:
  Version bump KDE Workspace 4.11.8

  11 Mar 2014; Johannes Huber <johu@gentoo.org> ksmserver-4.11.7.ebuild:
  Add RDEPEND on kde-base/kdm, fixes bug #496306.

  11 Mar 2014; Johannes Huber <johu@gentoo.org> -ksmserver-4.11.6.ebuild: