@@ -3,24 +3,24 @@ Hash: SHA256
 
 DIST kde-workspace-4.11.11.tar.xz 13534816 SHA256 f188b003c56d2a40f71d4eea8c91b7ae0febcf25c252c383913281fce73c4d73 SHA512 0f8076150f498e84875da1b18f8d596b0c16a3f5ddf5a838133fc9345f79c10faa7ff9c0f627c17b5dac5058af39c367d8a62b51d212ccbd07a0faded390d5f7 WHIRLPOOL a6a054029c27aec255b73b3a8fc67d496328b748935526f6a51ad806eadddd0975331d2f554c39d59b851e1f2299363607c2cb3c6d9ac0e90a2989a3cf52a291
 DIST kde-workspace-4.11.9.tar.xz 13536252 SHA256 aa3d12a264e7fcb6c1330e800b9c7d43c00277275d182824d42f9fe1def0c0cf SHA512 9f4292144981a94ccd9cfcd9a70ce673c3212c9962cce049668b15b86c5a037dfe0a4b0acfa4ad0c4c2902ded2b17521cbcff7e2411af7efb4c05af5b9465c81 WHIRLPOOL 26327aaee0ac92a6d8f9d9981b1f1cd4d2090d1124a7435301c55287228b57dba1f50814753abb468080787514ed19a60099ede0764d1bc09e76d948f1360879
-EBUILD ksmserver-4.11.11.ebuild 808 SHA256 d6a34c7f285c41ef2c47e3b824cf487f5ab4551f88353e6f1a73c99ad52c1d51 SHA512 b2308ba7f270c87937ed667b844f204964ce2b2771486aeb1a03926b9c3932a8799fd5f43447b302650a6783d522b3f70d8345f149f8cd7da1f351f81bcb1093 WHIRLPOOL 0fad85c7027b35c026b33fd8180d562c04477d8cec2a3cb30a00cd4afd62078cf029f212f896ec8d39d52d96aa398b013765784c5c36dc7cc5c115c944aa5c98
+EBUILD ksmserver-4.11.11-r1.ebuild 950 SHA256 051a1b1038128a9c211a441db6bd8f1bbf5e7c1bd15fbe926297ae89502dbecf SHA512 8409fa20617d036062fa9b7aee490fce7b20e2a519188eb7568573886f46a30307e950cdb91fbe7ac9b0c8fece4010c2f77106bba53bd6eba27012e5938d93c4 WHIRLPOOL 476ec2d01f2e13bda135737010683da0db473db0126220d93b528523b4b450882e2ccbc547891247ef51c0e12337d75d1aa409144c1db64df738ee0f20be63d2
 EBUILD ksmserver-4.11.9.ebuild 801 SHA256 94d7b7a77302af6a7e6e66d2fa0628565a8bfab99d7cbef3e8ceb9aa3b513cca SHA512 919af44a70a2ab54cecf0a421ad8b2fb5f8e657a3796437c39f3efcfe4a63a9fe6d2e95629f340081e5268e42b0148543e06f923c07991d9639949deba48275b WHIRLPOOL 640955b8a1c208af63365eecb20713d66ea054073949f3d812ba68428eb3dcdb2a45b9e1d61f5ed97234c3e00f6c45fa6f474ea1e2d30e2eaf53eef41476c1fa
-MISC ChangeLog 39063 SHA256 abd30c0b025fef29f7f460f033e2ad236b5f6195c056b08270cca58795c77c6d SHA512 4c89a2cda3ee90310706a5d36fc66a8b3d1206bb8ca91283c129f0ab340d925d8134752f2e8d02098c93e18a042401916e407b8bb558d61cee4184767bce363d WHIRLPOOL 6c5a4e63bddb931c10fc0fbad6e49f849e2124e71e2af05b7de9bc2f6676070df5e257705aa25db9cceca6057828161e7cee6226355635dc2613bf709aa76272
+MISC ChangeLog 39438 SHA256 99c85b59d01bc3f492cc2699dc7aec964a4d9b9427177d5d772bbae50c2d0799 SHA512 e1f4d572b2c491e3ed13898a2235abd6c8903528c70771831c79965ae8ddc06b53a5e94e1e0a08798323833ac9414854778eb53c5e7427db5eca5622e2e56616 WHIRLPOOL df73ee40e883385559fb96cf60ef59afd049b2a05e7332775038b59452222e03031464c08a2b1dc7495408e5714b92d0030f347ae02aefc55ef68c9def0502b3
 MISC metadata.xml 156 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a SHA512 0dcd7cfb246c4518ed1653cb06f5d2c7220ea90160a4b1a1da43edf5124b76d7104fe35a545178b6b3df19f5f3a3eb3f31ac1b4d169e3ca90d78be3e20e58b05 WHIRLPOOL df162e3d521df7decdd84d980e4bc71531bb8e05486c07102c554b529c10a1fb3374dda79d56b13bc037a2d230b4b8ff25702c7a1b86d703a24e8bfe7fe57642
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJTz+iVAAoJEGVpnaTzz9K9gaEP+wZyOVjhU6D+dRMoVNiexfwi
-0koSlBempfEvgNELMxpmVUpfdnF7/0PJXp6SifXAHqaPqpM5V07Me6+ZEKryzRyY
-KVb3Ao2qS+yYmaMS4jJs+bnguusaCSvDnPDrGvw2JqScYO8obmJhccru/gDGuyfj
-0mY5r5Hkk59L9OVUwxdeY8LbRHh3PpuxFudSF63Xccl/rXRGNmMTwTPntv299bx7
-7LlmWlyRJaSY6jz0JuNgKj0gM96LSMLDlZarXv+mbFqthDMZOcZSX1Rm5Xk/iZHD
-vRduLaRqm/3RfB9xKi5xg8bBOx8JbjxNPAtyz45cJrTlxrJaL+PYlkQkrD+AfeAo
-bGMw9DgqwgEiUT0ReAzIJC87e9W8az2JBy4tsCTUKpkIrOzHTAu29nVFmPdI2Gvl
-5KoHHOhkAEE4SpasIoWQXeOem72LZv6g4XVQLA4iEapWDAG9XskAfc2D+bk/bBd8
-tpHdIQjkWFArkaPo9d4a1xHqWNHUrHQTLzkURhBZNJjyVB6wtIxz0Og4LijU6B+g
-YUPCezjn3aYM1qcUCQ1pckLoh9VzP6fuid20v6tywWX/wUs71oyrXgZlRTitR9Vn
-RkDFuRX4gw4dSfuKNv2O8vMvtsesQCKxWxv78QSnF1rZrIIZbFewN7/CwbkA7d2J
-fMiGFKCQv8q0ytXMJDkI
-=nNu2
+iQIcBAEBCAAGBQJT822IAAoJEGVpnaTzz9K9IzwQAJEAkqG38mu5b/qH/cYqDRR3
+IrC3xJrBeGKcwPH+pC2RUp1vthiBdS37OFv3oqq5lVgUJLaY5Kfm9qfVKxUwRaG3
+dkxOH6m9xznY7pkTR/vkmBulCE4C9o6H3LQ+11nq0ynjh6clyC3ZE/BEBk0srJfc
+07405vqf8wfb7JLKOLudbKfMfJjhIr6W/tHTJ7ftPRmrGgbUbnTKikmJuXOdBWYj
+lt2fK7DLP8aQmASP1ZpASADInTvqUeRhahbZiL/GjzFt3OadmU3d7TJ0E4oFsOTe
+0QBkyYve1gIPOk6mRY6aA1tFjjMDMkHbW0uh0Y1urt0wxzEbwS4a7DKMfZyxWEmk
+8FD7+LT7jX1TP9cD7jeXhn0IUThKLjj5KRptK3q2O0kmYhS06Heuc+bgNU+q4wr4
+2u9f992bt+wNq/x6TXW7o9DCgyRu/80WPReMN3q8rzJVI/c3LorPAG3H0DdHJkVb
+7gI42CU8EQp+pljyAPNgDCATyj31r3zpU1YMy7xPydaYltABpu6yDFTyaedaLRWY
+IRx2EClVIqXlSf3zoB1/Tcs5nuZTB3NyLKMmPviRUas0mJpZHlNwL2hJlX3dv4Yp
+U66ANZFoqBQE1UgM6P0qb8AuWwClupKWxNv2DGRkZwkUuE5d5/60oHQy6LQJ2wQT
+wgg0SQC4OXDejO+YVMpq
+=ur6f
 -----END PGP SIGNATURE-----
