@@ -1,12 +1,12 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/ksmserver/ksmserver-4.11.11.ebuild,v 1.1 2014/07/16 17:40:15 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/ksmserver/ksmserver-4.11.11-r1.ebuild,v 1.2 2014/08/19 15:30:15 johu Exp $
 
 EAPI=5
 
 DECLARATIVE_REQUIRED="always"
 KMNAME="kde-workspace"
-inherit kde4-meta
+inherit kde4-meta pax-utils
 
 DESCRIPTION="The reliable KDE session manager that talks the standard X11R6"
 KEYWORDS=" ~amd64 ~arm ~ppc ~ppc64 ~x86 ~amd64-linux ~x86-linux"
@@ -34,3 +34,10 @@ KMEXTRACTONLY="
 "
 
 KMLOADLIBS="libkworkspace"
+
+src_install() {
+	kde4-meta_src_install
+
+	# bug #483236
+	pax-mark m "${ED}/usr/$(get_libdir)/kde4/libexec/kscreenlocker_greet"
+}
