@@ -9,5 +9,5 @@ LICENSE=GPL-2
 RDEPEND=>=kde-base/kcminit-4.11.11:4[aqua=] >=kde-base/libkworkspace-4.11.11:4[aqua=] media-libs/qimageblitz x11-libs/libICE x11-libs/libSM x11-libs/libX11 x11-libs/libXrender >=kde-base/kdm-4.11.11:4[aqua=] >=kde-base/oxygen-icons-4.11.11:4[aqua=] >=dev-qt/qtdeclarative-4.8.5:4 dev-lang/perl >=dev-qt/qt3support-4.8.5:4[accessibility] >=dev-qt/qtcore-4.8.5:4[qt3support,ssl] >=dev-qt/qtdbus-4.8.5:4 >=dev-qt/designer-4.8.5:4[-phonon] >=dev-qt/qtgui-4.8.5:4[accessibility,dbus(+)] >=dev-qt/qtscript-4.8.5:4 >=dev-qt/qtsql-4.8.5:4[qt3support] >=dev-qt/qtsvg-4.8.5:4 >=dev-qt/qttest-4.8.5:4 >=dev-qt/qtwebkit-4.8.5:4 >=kde-base/kdelibs-4.11.11:4[aqua=]
 SLOT=4/4.11
 SRC_URI=mirror://kde/stable/4.13.3/src/kde-workspace-4.11.11.tar.xz
-_eclasses_=cmake-utils	da2974fcb060ec927e93a17c835afa67	eutils	06133990e861be0fe60c2b428fd025d9	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	flag-o-matic	75e24bac8423c515dd9c5717f08feb83	gnome2-utils	f658eba3cc594a21cf6eef4af47daa90	kde4-base	ac5a39cce917ff325551988db062a3d0	kde4-functions	492237eb2823bdc02bc769530501f0ea	kde4-meta	43baa369240a27d6bc794953b4b07f66	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402	versionator	cd0bcdb170807e4a1984115e9d53a26f	virtualx	73cfc129b4b9ba23aed1abb10c825d86
-_md5_=09f37b3cf608b13431b62d0d48fbe73c
+_eclasses_=cmake-utils	da2974fcb060ec927e93a17c835afa67	eutils	06133990e861be0fe60c2b428fd025d9	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	flag-o-matic	75e24bac8423c515dd9c5717f08feb83	gnome2-utils	f658eba3cc594a21cf6eef4af47daa90	kde4-base	ac5a39cce917ff325551988db062a3d0	kde4-functions	492237eb2823bdc02bc769530501f0ea	kde4-meta	43baa369240a27d6bc794953b4b07f66	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	pax-utils	51ad5130f4a69b1a118ca5296de276ae	toolchain-funcs	0f1760274637a138b99bb649202ea402	versionator	cd0bcdb170807e4a1984115e9d53a26f	virtualx	73cfc129b4b9ba23aed1abb10c825d86
+_md5_=f00833f05ad88222aa8efdc01a9b0383
